; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_refs_reflog_expire.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_refs_reflog_expire.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_store = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }
%struct.object_id = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @refs_reflog_expire(%struct.ref_store* %0, i8* %1, %struct.object_id* %2, i32 %3, i32 %4, i32 %5, i32 %6, i8* %7) #0 {
  %9 = alloca %struct.ref_store*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.object_id*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  store %struct.ref_store* %0, %struct.ref_store** %9, align 8
  store i8* %1, i8** %10, align 8
  store %struct.object_id* %2, %struct.object_id** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i8* %7, i8** %16, align 8
  %17 = load %struct.ref_store*, %struct.ref_store** %9, align 8
  %18 = getelementptr inbounds %struct.ref_store, %struct.ref_store* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = bitcast {}** %20 to i32 (%struct.ref_store*, i8*, %struct.object_id*, i32, i32, i32, i32, i8*)**
  %22 = load i32 (%struct.ref_store*, i8*, %struct.object_id*, i32, i32, i32, i32, i8*)*, i32 (%struct.ref_store*, i8*, %struct.object_id*, i32, i32, i32, i32, i8*)** %21, align 8
  %23 = load %struct.ref_store*, %struct.ref_store** %9, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = load %struct.object_id*, %struct.object_id** %11, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %13, align 4
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* %15, align 4
  %30 = load i8*, i8** %16, align 8
  %31 = call i32 %22(%struct.ref_store* %23, i8* %24, %struct.object_id* %25, i32 %26, i32 %27, i32 %28, i32 %29, i8* %30)
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
